--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://static.wixstatic.com/media/368cfa_281c9844ac5a4fd0b0b3c605c91c63c6~mv2.png/v1/fill/w_150,h_130,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/WS_GraphicsLogoA.png" />
+    <link rel="icon" type="image/png" href="/images/rcfh_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RCFH</title>
   </head>
